# remix-python-test

backend/: .env  .gitignore  .watchfilesignore  main.py  pyproject.toml  requirements.txt  stock.db
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  stock.py  user.py
backend/app/core/: auth.py  config.py  database.py  http.py  security.py  stock.py  stock_indicators.py
backend/app/models/: member.py
backend/app/schemas/: auth.py  member.py  stock.py
frontend/: .cursorignore  .cursorindexingignore  .gitignore  README-STOCK.md  bun.lockb  components.json  package-lock.json  package.json  vite.config.mjs  vite.config.mts  vite.config.ts
frontend/app/: entry.client.tsx  entry.server.tsx  root.tsx  tailwind.css
frontend/app/assets/styles/: login.css
frontend/app/components/charts/: StockChart.tsx  StockChartSkeleton.tsx
frontend/app/components/editors/: MarkdownViewer.tsx
frontend/app/components/features/: AnalysisContent.tsx  AnalysisContentSkeleton.tsx
frontend/app/components/skeletons/: OneLineSkeleton.tsx  TitleBlankCardSkeleton.tsx
frontend/app/components/templates/: TemplateLayout.tsx
frontend/app/components/ui/: card.tsx
frontend/app/context/: AppContext.tsx
frontend/app/lib/: auth.server.ts  utils.ts
frontend/app/routes/: +types.d.ts  _index.tsx  _protected.dashboard.tsx  _protected.logout.tsx  _protected.tsx  loader.tsx  login.tsx
frontend/app/routes/dashboard/: +types.d.ts  action.ts  index.tsx
frontend/app/schemas/: dashboard.d.ts  login.d.ts
frontend/app/services/: auth.server.ts
(+10 files in other folders)
